refactor: Migrate ISynthesize to TypeCheck3; (constructor changes may follow)